fix: Disallows a line break on phone number (#3652)
OKTA-611152 fix: Disallows a line break on phone number

Fixes an issue with phone number having a line break in Japanese language or English on smaller screens

--- a/assets/sass/v2/_enroll-profile.scss
+++ b/assets/sass/v2/_enroll-profile.scss
@@ -9,6 +9,10 @@
       color: $dark-text-color;
       word-break: break-all;
     }
+
+    span.nowrap {
+      white-space: nowrap;
+    }
   }
 }
 
